--- a/TODO
+++ b/TODO
@@ -34,7 +34,6 @@ How to use this list:
 [j] make barely start work outside of ghci
 [] make common error and warn functions for command line processing
 
-[+m] write index.hs that gives the user a hello and what to do next
 [] updated template.hs that is a basic hello page
     [] what to do
     [] suggested re-edit in haskell comments
@@ -43,19 +42,21 @@ How to use this list:
 [] create addpage.hs page with form w/name and description
 [] generate new page from addpage.hs form
 [] error page give instructions for what to do
-[] scaffold.css should probably be named something better like barley.css
 [] Text.Html is forcing us to use prettyHtml instead of renderHtml
     [] either wrap the body contents in a div, and make page return an [Html]
         -- which is icky 'cause then the top html element isn't clear to users
     [] switch to some other HTML library
 [] handle errors during copyTree
 
+[+m] write index.hs that gives the user a hello and what to do next
+
 [+m] factor common code between Index.hs and Source.hs into lib/DevUtils.hs
 [] move source.hs into a dev directory
+[] scaffold.css should probably be named something better like barley.css
 
 [+m] make sure file path is rational before serving:
     - no ".." elements, no ".*" elements
-[m] Make ribbon.jpg longer, or figure out a way to put the Barley logotype in a
+[+m] Make ribbon.jpg longer, or figure out a way to put the Barley logotype in a
     separate image.
 [] Add the circle navigation buttons for: Home, Project List, Help
 
@@ -79,7 +80,7 @@ Source Editor
         [-] ? user page windows are named with the path so they reuse by page
         [-] pop window to the top (in Chrome it opens in a tab and 2nd time
             stays behind
-        [m] open up in _blank target
+        [+m] open up in _blank target
     [+m] open file via file: link
     [+m] editable form
     [+m] save file from form
@@ -90,6 +91,15 @@ Source Editor
         [+m] use jQuery to fill search fields with the selection in the source view
     [+m] make text area be the right size
         - perhaps use the elasitc jQuery plugin
+    [+m] validate that file is rational for both reading and writing
+        - doesn't contain .. path elements, for example
+        [-m] protect against Source.hs viewing itself (infinite iframes...)
+            -- no need, it works...
+    [+m] need a way to make the preview optional, and know for which
+        pages it should be on or not
+        -- previews if ext is .html or (.hs and not in ./Library)
+        [+m] preview disabled for things under lib/
+    [+m] line numbers
     [] On source editing cancel, if the text was changed, show a button (or link):
         "Undo Cancel" save and restore the text as needed.
         [] Not clear if Edit in this state should restore or not.
@@ -99,19 +109,15 @@ Source Editor
     [] research fill-from-selection should work even when source is read-only
         - but form elements don't have a selection when disabled.. hack?
     [] combine research text entry fields into one
-    [+m] validate that file is rational for both reading and writing
-        - doesn't contain .. path elements, for example
-        [-m] protect against Source.hs viewing itself (infinite iframes...)
-            -- no need, it works...
-    [+m] need a way to make the preview optional, and know for which
-        pages it should be on or not
-        -- previews if ext is .html or (.hs and not in ./Library)
-        [+m] preview disabled for things under lib/
     [m] optional setting to get side-by-side for the preview and edit panels
-    [+m] line numbers
     [] line numbers don't track when user resizes text area, or changes
         number of lines of text
+        [] text field should be non-wrapping
     [m] icons for the action links
+    
+    [] 80 column line would sure be nice
+    [] syntax coloring WTF
+    [] tab should insert spaces to multiple of four, or indent/outdent
     
 [] AJAX Compile
     [] on edit save, submit in background to a new endpoint
