--- a/TODO
+++ b/TODO
@@ -94,14 +94,25 @@ Source Editor
         [+m] preview disabled for things under lib/
     [+m] line numbers
     [+m] integrate CodeMirror as the source editor
-    [] "better" size the code editing box
-    [] change background color on edit/readonly
-    [] selection to research field is broken
-    [] eliminate annoying "shift" when CodeMirror loads the text
-    [] syntax parser for Haskell
+
+    [m] eliminate annoying "shift" when CodeMirror loads the text
+    [m] "better" size the code editing box
+        [m] editing field should make it bigger
+    [m] change background color on edit/readonly
+    [?m] perhaps not have expensive r/o version thing, but use the parser
+        to generate a static version - as in the example on CodeMirror site
+    [+m] syntax parser for Haskell
+        [+m] add class for words from the Prelude
+        [] still doesn't handle strings with gaps correctly....
+        [] style pragmas
+        [] smarter indenting
+    [m] choose parser (for hilighter) based on file extension
+        -- support js, css, html, xml
+        
     [] On source editing cancel, if the text was changed, show a button
         (or link): "Undo Cancel" save and restore the text as needed.
         [] Not clear if Edit in this state should restore or not.
+    [] selection to research field is broken
     [] research fill-from-selection should work even when source is read-only
         - but form elements don't have a selection when disabled.. hack?
     [] combine research text entry fields into one
