--- a/TODO
+++ b/TODO
@@ -94,32 +94,34 @@ Source Editor
         [+m] preview disabled for things under lib/
     [+m] line numbers
     [+m] integrate CodeMirror as the source editor
-
-    [m] eliminate annoying "shift" when CodeMirror loads the text
-    [m] "better" size the code editing box
-        [m] editing field should make it bigger
-    [m] change background color on edit/readonly
-    [?m] perhaps not have expensive r/o version thing, but use the parser
-        to generate a static version - as in the example on CodeMirror site
+    [+m] eliminate annoying "shift" when CodeMirror loads the text
+    [+m] "better" size the code editing box
+        [+m] editing field should make it bigger
     [+m] syntax parser for Haskell
         [+m] add class for words from the Prelude
+    [+m] change look on edit/readonly
+
+    [m] selection to research field is broken
+    [m] research fill-from-selection should work even when source is read-only
+    [m] icons for the action links
+    [?m] switch icon set to Fugue icons
+    
+    [] perhaps not have expensive r/o version thing, but use the parser
+        to generate a static version - as in the example on CodeMirror site
+    [] fix Haskell parser
         [] still doesn't handle strings with gaps correctly....
         [] style pragmas
         [] smarter indenting
-    [m] choose parser (for hilighter) based on file extension
+    [] choose parser (for hilighter) based on file extension
         -- support js, css, html, xml
-        
     [] On source editing cancel, if the text was changed, show a button
         (or link): "Undo Cancel" save and restore the text as needed.
         [] Not clear if Edit in this state should restore or not.
-    [] selection to research field is broken
-    [] research fill-from-selection should work even when source is read-only
-        - but form elements don't have a selection when disabled.. hack?
     [] combine research text entry fields into one
     [] optional setting to get side-by-side for the preview and edit panels
-    [m] icons for the action links
-    [?m] switch icon set to Fugue icons
     [] 80 column line would sure be nice
+    [] remove ZWSP hack in Source.hs when CodeMirror fixes the bug that inserts
+        them
     
 AJAX Compile
     [] on edit save, submit in background to a new endpoint
@@ -144,16 +146,18 @@ Content
     [+m] write index.hs that gives the user a hello and what to do next
     [+m] factor common code between Index.hs and Source.hs into lib/DevUtils.hs
     [+m] scaffold.css should probably be named something better like barley.css
-    [] move source.hs & project.hs into a dev directory
-        -- after compilation can handle hierarchical modules
-    [] Better Index page that actually points at the chapters & steps
-    [] Documentation page with links to sources
+
+    [m] Better Index page that actually points at the chapters & steps
+    [m] Documentation page with links to sources
         [?] embedded iframe of user's local doc set
-    [] Help page with pointers on what to do, where to go
-        [] FAQ system with sections, questions, jQuery expanding answers
-            generated from a text file or dir of text files 
+    [m] Help page with pointers on what to do, where to go
     [m] since jQuery, and images are copied into project tree, there should
         be a copy of the license & attributions copied in there as well
+
+    [] move source.hs & project.hs into a dev directory
+        -- after compilation can handle hierarchical modules
+    [] FAQ system with sections, questions, jQuery expanding answers
+        generated from a text file or dir of text files 
 
 Compilation
     [*j] unload modules after evaluating 'page'
